# json-repair

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  FAQ.md  README.en.md  README.md  REPAIR_PHILOSOPHY.md  SECURITY.md  clippy.toml  deny.toml  json_failures.txt  pyproject.toml
.github/workflows/: ci.yml
crates/json-repair-core/: CHANGELOG.md  Cargo.toml  README.md
crates/json-repair-core/benches/: README.md  bench_repair.rs
crates/json-repair-core/fuzz/: Cargo.toml
crates/json-repair-core/fuzz/corpus/repair/: _13.txt  _14.txt  _16.txt  _17.txt  _18.txt  _5.txt  _6.txt  _8.txt  bench_data_1.txt  bench_data_10.txt  bench_data_11.txt  bench_data_12.txt  bench_data_13.txt  bench_data_14.txt  bench_data_2.txt  bench_data_3.txt  bench_data_4.txt  bench_data_5.txt  bench_data_6.txt  bench_data_7.txt  bench_data_8.txt  bench_data_9.txt  brace_as_array_close_18.txt  brace_as_array_close_19.txt  brace_as_array_close_20.txt  brace_as_array_close_21.txt  brace_as_array_close_22.txt  broken_patterns_23.txt  broken_patterns_24.txt  broken_patterns_25.txt  broken_patterns_26.txt  broken_patterns_30.txt  broken_patterns_31.txt  broken_patterns_32.txt  broken_patterns_33.txt  broken_patterns_34.txt  broken_patterns_35.txt  broken_patterns_38.txt  colon_misplaced_as_comma_39.txt  colon_misplaced_as_comma_40.txt  (+104 more)
crates/json-repair-core/fuzz/fuzz_targets/: repair.rs
crates/json-repair-core/src/: config.rs  error.rs  format.rs  lib.rs  preprocess.rs  repairer.rs  trace.rs  util.rs
crates/json-repair-core/src/preprocess/: preamble.rs  quote_fix.rs
crates/json-repair-core/src/repairer/: bracket_stack.rs  comment.rs  input_cursor.rs  junk.rs  keys.rs  literal.rs  mod.rs  number.rs  output_buffer.rs  sequence.rs  string.rs  structure.rs
crates/json-repair-core/src/repairer/string/: closing.rs  escape.rs
crates/json-repair-core/tests/: README.md  broken_patterns.rs  control_chars.rs  corpus_scan.rs  debug_api.rs  edge_cases.rs  helpers.rs  jsonl_cases.rs  large_embedded.rs  prefix_junk.rs  preprocess.rs  proptests.proptest-regressions  proptests.rs  scenario.rs  tracing.rs  unterminated_string.rs
crates/json-repair-python/: Cargo.toml
crates/json-repair-python/src/: lib.rs
json_repair/: __init__.py  _cparse.pyx  _dev.py  _repair.py  _rust_parse.pyi
tests/: _helpers.py  check_failures.py  perf_report.py  test_adjacent_objects.py  test_complex_scenarios.py  test_control_characters.py  test_edge_cases.py  test_hypothesis.py  test_implicit_array.py  test_large_embedded_quotes.py  test_misordered_brackets.py  test_performance.py  test_repair.py  test_return_object.py  test_unterminated_string.py
tests/cases/: INDEX.md  bench_data.jsonl  brace_as_array_close.jsonl  broken_patterns.jsonl  colon_misplaced_as_comma.jsonl  comments.jsonl  complex_scenarios.jsonl  control_characters.jsonl  csv_escaping.jsonl  double_commas.jsonl  duplicate_brace.jsonl  edge_cases.jsonl  embedded_quotes_large.jsonl  extra_text.jsonl  four_quote.jsonl  invalid_escape.jsonl  leading_comma.jsonl  leading_dot_numbers.jsonl  markdown_code_block.jsonl  misordered_brackets.jsonl  missing_colons.jsonl  missing_commas.jsonl  missing_key_quote.jsonl  mixed_quotes.jsonl  prefix_tags.jsonl  python_literals.jsonl  single_quoted.jsonl  trailing_commas.jsonl  trailing_junk.jsonl  triple_quoted.jsonl  truncated.jsonl  unescaped_quotes.jsonl  unquoted_keys.jsonl  unquoted_values.jsonl  unterminated_string.jsonl  valid_pass_through.jsonl
tests/python/: README.md  _helpers.py  test_adjacent_objects.py  test_complex_scenarios.py  test_edge_cases.py  test_hypothesis.py  test_implicit_array.py  test_large_embedded_quotes.py  test_misordered_brackets.py  test_performance.py  test_repair.py  test_tracing.py  test_unterminated_string.py
