[workspace]
resolver = "2"
members = [
    "crates/json-repair-core",
]
exclude = [
    "crates/json-repair-python",
    "crates/json-repair-core/fuzz",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://gitee.com/mensui/json_repair"
homepage = "https://gitee.com/mensui/json_repair"
rust-version = "1.85"

[workspace.dependencies]
serde_json = "1"
pyo3 = { version = "0.23", features = ["extension-module"] }
