[workspace]
resolver = "2"
members = [
    "crates/json-repair-core",
]
exclude = [
    "crates/json-repair-python",
    "crates/json-repair-core/fuzz",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "GPL-2.0-only"
repository = "https://github.com/mengyingsui/json-repair"
homepage = "https://github.com/mengyingsui/json-repair"
rust-version = "1.85"

[workspace.dependencies]
serde_json = "1"
pyo3 = { version = "0.29", features = ["extension-module"] }
