[build-system]
requires = ["maturin>=1.14"]
build-backend = "maturin"

[project]
name = "json-repair"
version = "0.3.3"
description = "Repair malformed JSON from LLM outputs - handles unescaped quotes, triple-quoted strings, and more in a single pass"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "mensui" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["json", "repair", "llm", "malformed", "fix"]
dependencies = []

[project.urls]
Homepage = "https://gitee.com/mensui/json_repair"
Repository = "https://gitee.com/mensui/json_repair"
Changelog = "https://gitee.com/mensui/json_repair/blob/master/CHANGELOG.md"

[tool.maturin]
manifest-path = "crates/json-repair-python/Cargo.toml"
module-name = "json_repair._rust_parse"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["tests/python"]

[dependency-groups]
dev = [
    "codegraph>=1.2.0",
    "hypothesis>=6.155.7",
    "mypy>=2.1.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.6.0",
    "pyright==1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=6.1.0",
    "ruff>=0.15.18",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
extend-exclude = ["tests/cases/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["json_repair"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
]

[tool.pip-audit]
strict = true

# ── Dev workflow ──────────────────────────────────────────────────────────
#
# First-time setup:              uv sync
# Run tests:                     uv run pytest tests/python/ -v
# Run Rust benches:              cargo bench -p json-repair-core
# Run Python benches:            uv run pytest tests/python/test_performance.py --benchmark-only
# Lint:                          uv run ruff check json_repair/ tests/python/
# Rebuild Rust .pyd:             uv run maturin develop --release -m crates/json-repair-python/Cargo.toml
#                               then copy .venv/Lib/site-packages/_rust_parse/*.pyd to json_repair/
