[build-system]
requires = ["maturin>=1.14"]
build-backend = "maturin"

[project]
name = "json-repair"
version = "0.3.9"
description = "Repair malformed JSON from LLM outputs - handles unescaped quotes, triple-quoted strings, and more in a single pass"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "mensui" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
keywords = ["json", "repair", "llm", "malformed", "fix"]
dependencies = []

[project.urls]
Homepage = "https://github.com/mengyingsui/json-repair"
Repository = "https://github.com/mengyingsui/json-repair"
Changelog = "https://github.com/mengyingsui/json-repair/blob/master/CHANGELOG.md"

[tool.maturin]
manifest-path = "crates/json-repair-python/Cargo.toml"
module-name = "json_repair._rust_parse"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["tests/python"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-audit>=2.8.0",
    "pre-commit>=4.6.0",
    "pyright==1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.18",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
extend-exclude = ["tests/cases/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pip-audit]
strict = true

# ── Dev workflow ──────────────────────────────────────────────────────────
#
# First-time setup:              uv sync
# Run performance tests:         uv run pytest tests/python/test_performance.py --benchmark-only
# Run Rust benches:              cargo bench -p json-repair-core
# Run Python benches:            uv run pytest tests/python/test_performance.py --benchmark-only
# Lint:                          uv run ruff check json_repair/ tests/python/
# Rebuild Rust .pyd:             uv run maturin develop --release -m crates/json-repair-python/Cargo.toml
#                               then copy .venv/Lib/site-packages/_rust_parse/*.pyd to json_repair/
