[package]
name = "json-repair-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Core Rust library for repairing malformed JSON from LLM outputs"
keywords = ["json", "repair", "llm", "fix", "malformed"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
serde_json.workspace = true

[dev-dependencies]
serde = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_repair"
harness = false
