[workspace]

[package]
name = "json-repair-core-fuzz"
version = "0.0.1"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "repair"
path = "fuzz_targets/repair.rs"

[dependencies]
arbitrary = "1"
libfuzzer-sys = "0.4"
serde_json = "1"
json-repair-core = { path = ".." }
